--- a/package.json
+++ b/package.json
@@ -18,13 +18,28 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
     "babel-preset-env": "^1.6.0",
-    "eslint-config-defaults": "^9.0.0"
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "eslint-config-defaults": "^9.0.0",
+    "expose-loader": "^0.7.3",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "ngtemplate-loader": "^2.0.1",
+    "script-loader": "^0.7.2",
+    "webpack": "^3.8.1"
   },
   "dependencies": {
+    "angular": "^1.6.6",
     "babel-polyfill": "^6.23.0",
     "clear-require": "^2.0.0",
-    "http-server": "^0.10.0"
+    "http-server": "^0.10.0",
+    "lodash": "^4.17.4",
+    "p2": "^0.7.1",
+    "phaser": "^2.6.2",
+    "phaser-shim": "^2.4.8",
+    "pixi.js": "^2.2.9"
   }
 }
