--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "ngtemplate-loader": "^2.0.1",
+    "node-sass": "^4.6.0",
+    "sass-loader": "^6.0.6",
     "script-loader": "^0.7.2",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   },
   "dependencies": {
