Add colonize button, add game state, time and top bar with date display

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "p2": "^0.7.1",
     "phaser": "^2.6.2",
     "phaser-shim": "^2.4.8",
-    "pixi.js": "^2.2.9"
+    "pixi.js": "^2.2.9",
+    "reset-css": "^2.2.1"
   }
 }
