--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "angular": "^1.6.6",
+    "angular-tooltips": "^1.2.2",
     "babel-polyfill": "^6.23.0",
     "clear-require": "^2.0.0",
     "http-server": "^0.10.0",
