--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "npm test",
     "prestart": "./prestart.sh",
-    "start": "node node_modules/http-server/bin/http-server dist/ -p 8080 -a 0.0.0.0 -c-1",
-    "start-dev": "node node_modules/http-server/bin/http-server dist/ -p 8080 -a 0.0.0.0 -c-1"
+    "start": "webpack-dev-server --host 0.0.0.0 --public 0.0.0.0:8080 --hot",
+    "start:dev": "webpack-dev-server --host 0.0.0.0 --public 0.0.0.0:8080 --hot"
   },
   "repository": {
     "type": "git",
@@ -27,12 +27,14 @@
     "expose-loader": "^0.7.3",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "ng-cache-loader": "0.0.26",
     "ngtemplate-loader": "^2.0.1",
     "node-sass": "^4.6.0",
     "sass-loader": "^6.0.6",
     "script-loader": "^0.7.2",
     "style-loader": "^0.19.0",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
     "angular": "^1.6.6",
