--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "clear-require": "^2.0.0",
     "http-server": "^0.10.0",
     "lodash": "^4.17.4",
+    "milligram": "^1.3.0",
     "p2": "^0.7.1",
     "phaser": "^2.6.2",
     "phaser-shim": "^2.4.8",
